AC_PREREQ([2.61])
AC_INIT([test_cpplib], [0.1], [tai2.tran@lge.com])
#AC_CONFIG_AUX_DIR(aux-dist)
AM_INIT_AUTOMAKE

#AC_PROG_MAKE_SET
AC_PROG_CXX
#AC_PROG_CC
AC_LANG(C++)
#AC_LANG(C)

CXXFLAGS="-std=c++11 -fPIC"
#CXXFLAGS="-fPIC"

#AC_CONFIG_MACRO_DIR([m4])

#LT_PREREQ([2.2])
LT_INIT([dlopen shared])

#AC_CONFIG_FILES([Makefile include/Makefile src/Makefile])
AC_CONFIG_FILES([Makefile])

AC_OUTPUT

